samples/_failures_safe/1761426084_2124be_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6e98a660.c: In function ‘tokenize’:
./samples/SAFE/__tmp_6e98a660.c:174:9: error: expected expression at end of input
  174 |         else
      |         ^~~~
./samples/SAFE/__tmp_6e98a660.c:174:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6e98a660.c:174:9: error: expected declaration or statement at end of input
